# multi_darknet_ros--coordinate-_take

./: README.md
darknet_ros/darknet/: Makefile
darknet_ros/darknet/src/: convolutional_layer.c  image.c
darknet_ros/darknet_ros/: CMakeLists.txt  package.xml
darknet_ros/darknet_ros/config/: ros.yaml  rxz_ros1.yaml  rxz_ros2.yaml  rxz_ros3.yaml  rxz_ros4.yaml  rxz_ros5.yaml  yolov2-tiny_rxz.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch  five_yolo copy.launch  four_yolo.launch  rxz_darknet_ros1.launch  rxz_darknet_ros2.launch  rxz_darknet_ros3.launch  rxz_darknet_ros4.launch  rxz_darknet_ros5.launch  three_yolo.launch  two_yolo.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp  rxz_yolo_object_detector_node1.cpp  rxz_yolo_object_detector_node2.cpp  rxz_yolo_object_detector_node3.cpp  rxz_yolo_object_detector_node4.cpp  rxz_yolo_object_detector_node5.cpp
darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov2-tiny_rxz.cfg
darknet_ros/darknet_ros_msgs/: CMakeLists.txt
depth_take/: CMakeLists.txt  package.xml
depth_take/msg/: Object.msg
depth_take/src/: tf_trans.cpp  tf_trans2.cpp  tf_trans3.cpp  tf_trans4.cpp
